- Added support for python -W warning option to call enable_all_warnings() at startup.
  Also detects setting of PYPARSINGENABLEALLWARNINGS environment variable to any non-blank
  value.

- Fixed named results returned by `url` to match fields as they would be parsed
  using urllib.parse.urlparse.

- Early response to `with_line_numbers` was positive, with some requested enhancements:
  . added a trailing "<<" at the end of each line (to show presence of trailing spaces)
  . added expand_tabs argument, to control calling str.expandtabs (defaults to True
    to match parseString)
  . added mark_spaces argument to support display of a printing character in place of
    spaces, or Unicode symbols for space and tab characters
  . added mark_control argument to support highlighting of control characters using
    '.' or Unicode symbols, such as "␍" and "␊".

- Modified helpers common_html_entity and replace_html_entity() to use the HTML
  entity definitions from html.entities.html5.

- Updated the class diagram in the pyparsing docs directory, along with the supporting
  .puml file (PlantUML markup) used to create the diagram.

- Added global method `autoname_elements()` to call `set_name()` on all locally
  defined `ParserElements` that haven't been explicitly named using `set_name()`, using
  their local variable name. Useful for setting names on multiple elements when
  creating a railroad diagram.

            a = pp.Literal("a")
            b = pp.Literal("b").set_name("bbb")
            pp.autoname_elements()

  `a` will get named "a", while `b` will keep its name "bbb".


Version 3.0.0rc2 -
------------------
- Added `url` expression to `pyparsing_common`. (Sample code posted by Wolfgang Fahl,
  very nice!)

  This new expression has been added to the `urlExtractorNew.py` example, to show how
  it extracts URL fields into separate results names.

- Added method to `pyparsing_test` to help debugging, `with_line_numbers`.